--- a/com.wso2telco.dep.hub.provisionapi/com.wso2telco.dep.hub.provisionapi.capp/pom.xml
+++ b/com.wso2telco.dep.hub.provisionapi/com.wso2telco.dep.hub.provisionapi.capp/pom.xml
@@ -20,6 +20,7 @@
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.provisionService.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.provisionService.Sequence>
     <com.wso2telco.dep.hub.api_._provisionAPI>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.api_._provisionAPI>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.queryApplicable.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.queryApplicable.Sequence>
+    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.provisioning.recaller.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.provisioning.recaller.Sequence>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.unprovisionService.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.unprovisionService.Sequence>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.listServiceByCustomer.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.listServiceByCustomer.Sequence>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.provisioning.notification.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.provisioning.notification.Sequence>
@@ -70,6 +71,12 @@
     <dependency>
       <groupId>com.wso2telco.dep.hub.sequence</groupId>
       <artifactId>com.wso2telco.dep.hub.provisionapi.queryApplicable.recaller.Sequence</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.sequence</groupId>
+      <artifactId>com.wso2telco.dep.hub.provisionapi.provisioning.recaller.Sequence</artifactId>
       <version>2.0.0-SNAPSHOT</version>
       <type>xml</type>
     </dependency>
