--- a/com.wso2telco.dep.hub.smsmessagingapi/com.wso2telco.dep.hub.smsmessagingapi.synapse/pom.xml
+++ b/com.wso2telco.dep.hub.smsmessagingapi/com.wso2telco.dep.hub.smsmessagingapi.synapse/pom.xml
@@ -6,11 +6,9 @@
     <groupId>com.wso2telco.dep.hub</groupId>
     <artifactId>com.wso2telco.dep.hub.smsmessagingapi</artifactId>
     <version>2.0.0-SNAPSHOT</version>
-    <relativePath>pom.xml</relativePath>
+    <relativePath>../pom.xml</relativePath>
   </parent>
-  <groupId>com.wso2telco.dep.hub</groupId>
   <artifactId>com.wso2telco.dep.hub.smsmessagingapi.synapse</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>com.wso2telco.dep.hub.smsmessagingapi.synapse</name>
   <description>com.wso2telco.dep.hub.smsmessagingapi.synapse</description>
