--- a/com.wso2telco.dep.hub.smsmessagingapi/pom.xml
+++ b/com.wso2telco.dep.hub.smsmessagingapi/pom.xml
@@ -8,12 +8,14 @@
     <version>2.0.0-SNAPSHOT</version>
     <relativePath>..\pom.xml</relativePath>
   </parent>
-  <groupId>com.wso2telco.dep.hub</groupId>
   <artifactId>com.wso2telco.dep.hub.smsmessagingapi</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>com.wso2telco.dep.hub.smsmessagingapi</name>
   <description>com.wso2telco.dep.hub.smsmessagingapi</description>
+  <modules>
+    <module>com.wso2telco.dep.hub.smsmessagingapi.synapse</module>
+    <module>com.wso2telco.dep.hub.smsmessagingapi.capp</module>
+  </modules>
   <build>
     <plugins>
       <plugin>
