--- a/com.wso2telco.dep.hub.smsmessagingapi/pom.xml
+++ b/com.wso2telco.dep.hub.smsmessagingapi/pom.xml
@@ -2,18 +2,21 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>com.wso2telco.dep.hub</groupId>
+    <artifactId>mediation-dep-hub</artifactId>
+    <version>2.0.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
+  </parent>
   <groupId>com.wso2telco.dep.hub</groupId>
-  <artifactId>mediation-dep-hub</artifactId>
+  <artifactId>com.wso2telco.dep.hub.smsmessagingapi</artifactId>
   <version>2.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>mediation-dep-hub</name>
-  <description>mediation-dep-hub</description>
+  <name>com.wso2telco.dep.hub.smsmessagingapi</name>
+  <description>com.wso2telco.dep.hub.smsmessagingapi</description>
   <modules>
-    <module>com.wso2telco.dep.hub.walletapi</module>
-    <module>com.wso2telco.dep.hub.creditapi</module>
-    <module>com.wso2telco.dep.hub.provisionapi</module>
-    <module>com.wso2telco.dep.hub.customerinfoapi</module>
-    <module>com.wso2telco.dep.hub.smsmessagingapi</module>
+    <module>com.wso2telco.dep.hub.smsmessagingapi.synapse</module>
+    <module>com.wso2telco.dep.hub.smsmessagingapi.capp</module>
   </modules>
   <build>
     <plugins>
