--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <module>com.wso2telco.dep.hub.provisionapi</module>
     <module>com.wso2telco.dep.hub.customerinfoapi</module>
     <module>com.wso2telco.dep.hub.smsmessagingapi</module>
-    <module>../mediation-dep-hub-temp/com.wso2telco.dep.hub.ussdapi</module>
+    <module>com.wso2telco.dep.hub.ussdapi</module>
     <module>com.wso2telco.dep.hub.paymentapi</module>
     <module>com.wso2telco.dep.hub.walletapi</module>
     <module>com.wso2telco.dep.hub.creditapi</module>
