--- a/com.wso2telco.dep.hub.locationapi/pom.xml
+++ b/com.wso2telco.dep.hub.locationapi/pom.xml
@@ -2,6 +2,11 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>com.wso2telco.dep.hub</groupId>
+    <artifactId>mediation-dep-hub</artifactId>
+    <version>2.0.0-SNAPSHOT</version>
+  </parent>
   <groupId>com.wso2telco.dep.hub</groupId>
   <artifactId>com.wso2telco.dep.hub.locationapi</artifactId>
   <version>2.0.0-SNAPSHOT</version>
@@ -10,6 +15,7 @@
   <description>com.wso2telco.dep.hub.locationapi</description>
   <modules>
     <module>com.wso2telco.dep.hub.locationapi.synapse</module>
+    <module>com.wso2telco.dep.hub.locationapi.capp</module>
   </modules>
   <build>
     <plugins>
