--- a/com.wso2telco.dep.hub.paymentapi/com.wso2telco.dep.hub.paymentapi.capp/pom.xml
+++ b/com.wso2telco.dep.hub.paymentapi/com.wso2telco.dep.hub.paymentapi.capp/pom.xml
@@ -2,7 +2,12 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.wso2telco.dep.hub.paymentapi.capp</groupId>
+  <parent>
+    <groupId>com.wso2telco.dep.hub</groupId>
+    <artifactId>com.wso2telco.dep.hub.paymentapi</artifactId>
+    <version>2.0.0-SNAPSHOT</version>
+  </parent>
+  <groupId>com.wso2telco.dep.hub</groupId>
   <artifactId>com.wso2telco.dep.hub.paymentapi.capp</artifactId>
   <version>2.0.0-SNAPSHOT</version>
   <packaging>carbon/application</packaging>
@@ -94,7 +99,7 @@
       <plugin>
         <groupId>org.wso2.maven</groupId>
         <artifactId>maven-car-plugin</artifactId>
-        <version>2.1.0</version>
+        <version>2.1.1</version>
         <extensions>true</extensions>
         <executions>
           <execution>
@@ -110,7 +115,7 @@
       <plugin>
         <groupId>org.wso2.maven</groupId>
         <artifactId>maven-car-deploy-plugin</artifactId>
-        <version>1.1.0</version>
+        <version>1.1.1</version>
         <extensions>true</extensions>
         <configuration>
           <carbonServers>
