--- a/com.wso2telco.dep.hub.paymentapi/pom.xml
+++ b/com.wso2telco.dep.hub.paymentapi/pom.xml
@@ -2,14 +2,19 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.wso2telco.dep.hub</groupId>
+  <parent>
+    <groupId>com.wso2telco.dep.hub</groupId>
+    <artifactId>mediation-dep-hub</artifactId>
+    <version>2.0.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
+  </parent>
   <artifactId>com.wso2telco.dep.hub.paymentapi</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>com.wso2telco.dep.hub.paymentapi</name>
   <description>com.wso2telco.dep.hub.paymentapi</description>
   <modules>
     <module>com.wso2telco.dep.hub.paymentapi.synapse</module>
+    <module>com.wso2telco.dep.hub.paymentapi.capp</module>
   </modules>
   <build>
     <plugins>
