--- a/com.wso2telco.dep.hub.paymentapi/com.wso2telco.dep.hub.paymentapi.capp/pom.xml
+++ b/com.wso2telco.dep.hub.paymentapi/com.wso2telco.dep.hub.paymentapi.capp/pom.xml
@@ -16,7 +16,7 @@
   <properties>
     <com.wso2telco.dep.hub.paymentapi.synapse.api_._paymentAPI>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.paymentapi.synapse.api_._paymentAPI>
     <com.wso2telco.dep.hub.paymentapi.synapse.sequence_._com.wso2telco.dep.hub.paymentapi.handle.charge.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.paymentapi.synapse.sequence_._com.wso2telco.dep.hub.paymentapi.handle.charge.Sequence>
-    <com.wso2telco.dep.hub.paymentapi.synapse.sequence_._com.wso2telco.dep.hub.walletapi.handle.list.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.paymentapi.synapse.sequence_._com.wso2telco.dep.hub.walletapi.handle.list.Sequence>
+    <com.wso2telco.dep.hub.paymentapi.synapse.sequence_._com.wso2telco.dep.hub.paymentapi.handle.list.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.paymentapi.synapse.sequence_._com.wso2telco.dep.hub.paymentapi.handle.list.Sequence>
     <com.wso2telco.dep.hub.paymentapi.synapse.sequence_._com.wso2telco.dep.hub.paymentapi.handle.refund.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.paymentapi.synapse.sequence_._com.wso2telco.dep.hub.paymentapi.handle.refund.Sequence>
     <artifact.types>jaggery/app=zip,synapse/priority-executor=xml,synapse/inbound-endpoint=xml,lib/registry/handlers=jar,service/rule=aar,lib/registry/filter=jar,synapse/message-store=xml,event/stream=json,service/meta=xml,synapse/proxy-service=xml,bpel/workflow=zip,synapse/sequence=xml,synapse/endpointTemplate=xml,carbon/application=car,synapse/api=xml,wso2/gadget=dar,synapse/event-source=xml,synapse/message-processors=xml,event/receiver=xml,lib/dataservice/validator=jar,synapse/template=xml,synapse/endpoint=xml,lib/carbon/ui=jar,lib/synapse/mediator=jar,event/publisher=xml,synapse/local-entry=xml,synapse/task=xml,webapp/jaxws=war,registry/resource=zip,synapse/configuration=xml,service/axis2=aar,synapse/lib=zip,synapse/sequenceTemplate=xml,event/execution-plan=siddhiql,service/dataservice=dbs,web/application=war,lib/library/bundle=jar</artifact.types>
   </properties>
@@ -41,7 +41,7 @@
     </dependency>
     <dependency>
       <groupId>com.wso2telco.dep.hub.paymentapi.synapse.sequence</groupId>
-      <artifactId>com.wso2telco.dep.hub.walletapi.handle.list.Sequence</artifactId>
+      <artifactId>com.wso2telco.dep.hub.paymentapi.handle.list.Sequence</artifactId>
       <version>2.0.0-SNAPSHOT</version>
       <type>xml</type>
     </dependency>
