--- a/com.wso2telco.dep.hub.paymentapi/pom.xml
+++ b/com.wso2telco.dep.hub.paymentapi/pom.xml
@@ -9,6 +9,7 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>com.wso2telco.dep.hub.paymentapi</artifactId>
+  <version>2.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>com.wso2telco.dep.hub.paymentapi</name>
   <description>com.wso2telco.dep.hub.paymentapi</description>
