--- a/com.wso2telco.dep.hub.smsmessagingapi/com.wso2telco.dep.hub.smsmessagingapi.capp/pom.xml
+++ b/com.wso2telco.dep.hub.smsmessagingapi/com.wso2telco.dep.hub.smsmessagingapi.capp/pom.xml
@@ -15,7 +15,7 @@
   <description>com.wso2telco.dep.hub.smsmessagingapi.capp</description>
   <properties>
     <com.wso2telco.dep.hub.api_._smsmessagingAPI>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.api_._smsmessagingAPI>
-    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.dn.subscription.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.dn.subscription.Sequence>
+    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.delivery.notification.subscription.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.delivery.notification.subscription.Sequence>
     <artifact.types>jaggery/app=zip,synapse/priority-executor=xml,synapse/inbound-endpoint=xml,lib/registry/handlers=jar,service/rule=aar,lib/registry/filter=jar,synapse/message-store=xml,event/stream=json,service/meta=xml,synapse/proxy-service=xml,bpel/workflow=zip,synapse/sequence=xml,synapse/endpointTemplate=xml,carbon/application=car,synapse/api=xml,wso2/gadget=dar,synapse/event-source=xml,synapse/message-processors=xml,event/receiver=xml,lib/dataservice/validator=jar,synapse/template=xml,synapse/endpoint=xml,lib/carbon/ui=jar,lib/synapse/mediator=jar,event/publisher=xml,synapse/local-entry=xml,synapse/task=xml,webapp/jaxws=war,registry/resource=zip,synapse/configuration=xml,service/axis2=aar,synapse/lib=zip,synapse/sequenceTemplate=xml,event/execution-plan=siddhiql,service/dataservice=dbs,web/application=war,lib/library/bundle=jar</artifact.types>
   </properties>
   <dependencies>
@@ -27,7 +27,7 @@
     </dependency>
     <dependency>
       <groupId>com.wso2telco.dep.hub.sequence</groupId>
-      <artifactId>com.wso2telco.dep.hub.smsmessagingapi.handle.dn.subscription.Sequence</artifactId>
+      <artifactId>com.wso2telco.dep.hub.smsmessagingapi.handle.delivery.notification.subscription.Sequence</artifactId>
       <version>2.0.0-SNAPSHOT</version>
       <type>xml</type>
     </dependency>
