--- a/com.wso2telco.dep.hub.smsmessagingapi/pom.xml
+++ b/com.wso2telco.dep.hub.smsmessagingapi/pom.xml
@@ -6,7 +6,6 @@
     <groupId>com.wso2telco.dep.hub</groupId>
     <artifactId>mediation-dep-hub</artifactId>
     <version>2.0.0-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
   </parent>
   <groupId>com.wso2telco.dep.hub</groupId>
   <artifactId>com.wso2telco.dep.hub.smsmessagingapi</artifactId>
@@ -16,6 +15,7 @@
   <description>com.wso2telco.dep.hub.smsmessagingapi</description>
   <modules>
     <module>com.wso2telco.dep.hub.smsmessagingapi.synapse</module>
+    <module>com.wso2telco.dep.hub.smsmessagingapi.registry.resources</module>
     <module>com.wso2telco.dep.hub.smsmessagingapi.capp</module>
   </modules>
   <build>
